--- a/Clock-iOS/Base.lproj/Main.storyboard
+++ b/Clock-iOS/Base.lproj/Main.storyboard
@@ -31,49 +31,13 @@
                     <view key="view" contentMode="scaleToFill" id="R2D-s0-y2h">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Da0-aV-dg8">
-                                <rect key="frame" x="0.0" y="210" width="414" height="85"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ksI-PF-Iqe">
-                                        <rect key="frame" x="377" y="32" width="30" height="48"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <state key="normal" title="+">
-                                            <color key="titleColor" systemColor="systemYellowColor"/>
-                                            <color key="titleShadowColor" systemColor="systemBlueColor"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="openAddClock:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oHK-sp-KiS"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Alarme" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoB-hh-9H6">
-                                        <rect key="frame" x="176" y="37" width="62" height="43"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <color key="textColor" systemColor="systemGroupedBackgroundColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                                <constraints>
-                                    <constraint firstItem="ksI-PF-Iqe" firstAttribute="top" secondItem="Da0-aV-dg8" secondAttribute="top" constant="32" id="KtO-j1-bG8"/>
-                                    <constraint firstAttribute="trailing" secondItem="ksI-PF-Iqe" secondAttribute="trailing" constant="7" id="OkL-7N-YA5"/>
-                                    <constraint firstItem="ksI-PF-Iqe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="aoB-hh-9H6" secondAttribute="trailing" constant="8" symbolic="YES" id="QYn-GG-C5h"/>
-                                    <constraint firstAttribute="bottom" secondItem="aoB-hh-9H6" secondAttribute="bottom" constant="5" id="SVV-21-LWK"/>
-                                    <constraint firstItem="aoB-hh-9H6" firstAttribute="top" secondItem="Da0-aV-dg8" secondAttribute="top" constant="37" id="bgW-5H-9DZ"/>
-                                    <constraint firstAttribute="bottom" secondItem="ksI-PF-Iqe" secondAttribute="bottom" constant="5" id="gk9-v8-R4F"/>
-                                    <constraint firstItem="aoB-hh-9H6" firstAttribute="leading" secondItem="Da0-aV-dg8" secondAttribute="leading" constant="15" id="nbu-Ar-kcz"/>
-                                </constraints>
-                            </view>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="DLz-mQ-ble"/>
-                        <constraints>
-                            <constraint firstItem="Da0-aV-dg8" firstAttribute="trailing" secondItem="DLz-mQ-ble" secondAttribute="trailing" id="Qr6-hc-lgp"/>
-                            <constraint firstItem="Da0-aV-dg8" firstAttribute="top" secondItem="R2D-s0-y2h" secondAttribute="top" id="TVC-9y-aZZ"/>
-                            <constraint firstItem="Da0-aV-dg8" firstAttribute="leading" secondItem="DLz-mQ-ble" secondAttribute="leading" id="mav-yr-ft1"/>
-                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Alarme" id="Rwa-Md-Uzh"/>
+                    <navigationItem key="navigationItem" title="Alarme" id="Rwa-Md-Uzh">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nsr-px-U6k">
+                            <color key="tintColor" systemColor="systemYellowColor"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -114,17 +78,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGroupedBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="tertiaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
